--- a/giF0S_Project/Styles/Styles.scss
+++ b/giF0S_Project/Styles/Styles.scss
@@ -47,6 +47,7 @@ body {
         padding-right: 0.2504%;
     }
 
+    // THESE ARE THE STYLES OF THE CREATE GUIFOS BUTTON
     #buttonOne {
         align-self: center;
         margin-right: 1.1137%;
@@ -62,16 +63,19 @@ body {
         box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
 
         &:active {
+            background-color: #E6BBE2;
             outline: 1px dotted $outsidebordercolor;
             outline-offset: -4px;
         }
 
         &:hover {
+            background-color: #E6BBE2;
             outline: 1px dotted $outsidebordercolor;
             outline-offset: -4px;
         }
     }
 
+    //THESE ARE THE STYLES OF THE CONTAINER AND ITS ELEMENTS THEME BUTTON AND THE DROPDOWN BUTTON
     #buttonTwo {
         align-self: center;
         display: flex;
@@ -98,11 +102,13 @@ body {
             box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
 
             &:active {
+                background-color: #E6BBE2;
                 outline: 1px dotted $outsidebordercolor;
                 outline-offset: -4px;
             }
 
             &:hover {
+                background-color: #E6BBE2;
                 outline: 1px dotted $outsidebordercolor;
                 outline-offset: -4px;
             }
@@ -125,11 +131,13 @@ body {
             box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
 
             &:active {
+                background-color: #E6BBE2;
                 outline: 1px dotted $outsidebordercolor;
                 outline-offset: -4px;
             }
 
             &:hover {
+                background-color: #E6BBE2;
                 outline: 1px dotted $outsidebordercolor;
                 outline-offset: -4px;
             }
@@ -150,10 +158,6 @@ body {
         padding-left: 0px;
         box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
         list-style: none;
-
-        a {
-            text-decoration: none;
-        }
 
         .day {
             cursor: pointer;
@@ -224,9 +228,7 @@ a {
     &:active {
         color: $searchBarColor;
     }
-
 }
-
 
 #searchBox {
     background-color: $backgroundcolorsearchbox;
@@ -305,20 +307,30 @@ a {
 
             #buttonContent {
                 color: $outsidebordercolor;
-                background-image: url(../Images/lupa.svg);
-                background-repeat: no-repeat;
-                background-position: left;
+                
+                #mGlassImage{
+                    display: none;
+                }
+                #mGlass{
+                    display: flex;
+                }
             }
-
-            // #mGlassImage{
-            //     display: none;
-            // }
         }
 
         #buttonContent {
             display: flex;
             flex-direction: row;
             justify-content: space-around;
+            
+            #mGlassImageDark{
+                display: none;
+            }
+            #mGlass{
+                display: none;
+            }
+            #mGlassLight{
+                display: none;
+            }
         }
     }
 
@@ -342,6 +354,7 @@ a {
     position: relative;
     z-index: 2;
     flex-direction: column;
+    //review this property
     width: 100%;
     height: 160px;
     background-color: $backgroundcolorsearchbox;
@@ -584,7 +597,7 @@ a {
             img {
                 position: relative;
                 z-index: 1;
-                left: 4px;
+                left: 3px;
                 bottom: 18px;
                 height: 100%;
                 width: 97.2778%;
@@ -593,7 +606,6 @@ a {
             p {
                 display: flex;
             }
-
         }
 
         img {
@@ -650,7 +662,7 @@ a {
                 display: flex;
             }
 
-        }
+    }
 
         img {
             height: 100%;
@@ -729,7 +741,6 @@ a {
             height: 24px;
             width: 98.7%;
             background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
-
         }
     }
 
