--- a/giF0S_Project/Styles/DarkStyles/Styles2.scss
+++ b/giF0S_Project/Styles/DarkStyles/Styles2.scss
@@ -268,6 +268,7 @@ a {
 
     #mySearch {
         caret-color: #4180F6;
+        
         color: $outsidebordercolor;
         font-size: 16px;
         font-family: $primaryfont;
@@ -280,6 +281,7 @@ a {
         list-style: lower-alpha;
 
         &::placeholder {
+            padding-left: 1.3333%;
             color: $backgroundcolorsearchbox;
             font-size: 16px;
             font-family: $primaryfont;
@@ -382,49 +384,52 @@ a {
         color: $backgroundcolorsearchbox;
     }
 
-    #resultSearch {
-        margin-top: 17px;
+    #Result1 {
         text-align: left;
-        background-color: $backgroundcolorsearchbox;
-        border: solid 1px $outsidebordercolor;
-        box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
-
-        &:hover {
-            background-color: #DBDBDB;
-            border: #808080 1PX solid;
-            box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
-            outline: 1px dotted $outsidebordercolor;
-            outline-offset: -4px;
-        }
-    }
-
-    #similarResult {
-        text-align: left;
+        color: $outsidebordercolor;
         margin-top: 11px;
         background-color: #f0f0f0;
         border: solid 1px #808080;
         box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
 
         &:hover {
-            background-color: #DBDBDB;
+            background-color: #CCCCCC ;
             border: #808080 1PX solid;
-            box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
+            box-shadow: inset -1px -1px 0 0 $backgroundcolorsearchbox, inset 1px 1px 0 0 $fontcolorheader;
             outline: 1px dotted $outsidebordercolor;
             outline-offset: -4px;
         }
     }
 
-    #otherOneResult {
+    #Result2 {
         text-align: left;
+        color: $outsidebordercolor;
+        margin-top: 11px;
+        background-color: #f0f0f0;
+        border: solid 1px #808080;
+        box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
+
+        &:hover {
+            background-color: #CCCCCC ;
+            border: #808080 1PX solid;
+            box-shadow: inset -1px -1px 0 0 $backgroundcolorsearchbox, inset 1px 1px 0 0 $fontcolorheader;
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+        }
+    }
+
+    #Result3 {
+        text-align: left;
+        color: $outsidebordercolor;
         margin-top: 10px;
         background-color: #f0f0f0;
         border: solid 1px #808080;
         box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
 
         &:hover {
-            background-color: #DBDBDB;
+            background-color: #CCCCCC ;
             border: #808080 1PX solid;
-            box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
+            box-shadow: inset -1px -1px 0 0 $backgroundcolorsearchbox, inset 1px 1px 0 0 $fontcolorheader;
             outline: 1px dotted $outsidebordercolor;
             outline-offset: -4px;
         }
